<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/all" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_whatshot"
            android:title="@string/popular" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/trash" />
    </group>
<!--
    <item android:title="Sub items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="Sub item 1" />
            <item
                android:icon="@drawable/ic_forum"
                android:title="Sub item 2" />
        </menu>
    </item>-->

</menu>