<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/primary"
        android:id="@+id/bs_main_container"
        >

        <com.tevinjeffrey.vapor.customviews.TouchImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bs_main_icon"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_desc_file_image_preview"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/bs_main_scrim"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/bs_expand_icon"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_fullscreen"
                android:contentDescription="@string/content_desc_enter_fullscreen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:id="@+id/bs_file_name"
                android:layout_alignParentBottom="true"
                tools:text="Long ass file name.zip Long ass file name.zip Long ass file name.zip"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="40dp"
                android:maxLines="2"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="40dp"/>

        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:padding="16dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/bs_download_link_container"
            style="@style/BottomSheetItemContainer"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bs_download_link_icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_file_download_primary"
                android:contentDescription="@string/content_desc_download_file"/>
            <TextView
                android:text="@string/download"
                android:id="@+id/bs_download_link_title"
                style="@style/PrimaryText"
                android:layout_below="@+id/bs_download_link_icon"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bs_share_link_container"
            style="@style/BottomSheetItemContainer"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bs_share_link_icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_share_primary"
                android:contentDescription="@string/content_desc_share_link_to_file"/>

            <TextView
                android:text="@string/share_link"
                android:layout_below="@+id/bs_share_link_icon"
                android:id="@+id/bs_share_link_title"
                android:layout_centerHorizontal="true"
                style="@style/PrimaryText"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bs_rename_container"
            style="@style/BottomSheetItemContainer"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bs_rename_icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_edit_primary"
                android:contentDescription="@string/content_desc_rename_file"/>

            <TextView
                android:text="@string/rename"
                android:layout_below="@+id/bs_rename_icon"
                android:id="@+id/bs_rename_title"
                android:layout_centerHorizontal="true"
                style="@style/PrimaryText"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bs_delete_container"
            style="@style/BottomSheetItemContainer"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bs_delete_icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/content_dec_delete_file"/>

            <TextView
                android:text="@string/remove"
                android:layout_below="@+id/bs_delete_icon"
                android:id="@+id/bs_delete_title"
                android:layout_centerHorizontal="true"
                style="@style/PrimaryText"
                />
        </RelativeLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <RelativeLayout
        android:id="@+id/bs_size_container"
        style="@style/BottomSheetItemContainer"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:text="@string/size"
            android:id="@+id/bs_size_title"
            style="@style/PrimaryText"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            tools:text="2.6MB"
            android:id="@+id/bs_size_text"
            style="@style/SecondaryText"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bs_created_container"
        style="@style/BottomSheetItemContainer"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:text="@string/created"
            android:id="@+id/bs_created_title"
            style="@style/PrimaryText"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            tools:text="September 16th 1994"
            android:id="@+id/bs_created_text"
            style="@style/SecondaryText"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bs_views_container"
        style="@style/BottomSheetItemContainer"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:text="@string/views"
            android:id="@+id/bs_views_title"
            style="@style/PrimaryText"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            tools:text="image/png 2.6MB"
            android:id="@+id/bs_views_text"
            style="@style/SecondaryText"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"/>
    </RelativeLayout>

</LinearLayout>